# cagematch-scraper

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: nightly.yml  refresh-upcoming.yml  scrape.yml.example  seed-cache.yml
docs/: sdh-crosswalk.md
src/cagematch_scraper/: browser.py  cli.py  config.py  dates.py  http.py  hybrid.py  items.py  runner.py
src/cagematch_scraper/export/: __init__.py  changes.py  cursor.py  match.sql  schema.sql  transform.sql  warehouse.py
src/cagematch_scraper/spiders/: __init__.py  base.py  htmlutils.py  matches.py  promotions.py  titles.py  wrestlers.py
src/cagematch_scraper/spiders/sdh/: __init__.py  titles.py  utils.py  wrestlers.py
tests/: conftest.py  test_dates.py  test_export.py  test_export_changes.py  test_hybrid.py  test_match.py  test_matches.py  test_promotions.py  test_runner.py  test_sdh.py  test_titles.py  test_wrestlers.py
tests/fixtures/: aew_roster.html  promotion_profile.html  promotions_list.html  wrestler_profile_multirange.html  wrestler_profile_rusev.html  wwe_alltime_roster.html  wwe_dco_event_results.html  wwe_event_results.html  wwe_events_2020.html  wwe_mania36_results.html  wwe_roster.html
tests/fixtures/sdh/: cm_punk.html  wwe_championship.html  wwe_titles_index.html
